--- a/.github/workflows/daily-financial-update.yml
+++ b/.github/workflows/daily-financial-update.yml
@@ -3,7 +3,55 @@ name: Daily Financial Intelligence Update
 on:
   # Schedule to run every day at 8:00 AM CST (2 PM UTC)
     schedule:
+name: Daily Financial Intelligence Update
+
+on:
+  # Schedule to run every day at 8:00 AM CST (2 PM UTC)
+    schedule:
         - cron: '0 14 * * *'  # 8 AM CST / 2 PM UTC
+        
+          # Allow manual triggering from GitHub Actions tab
+            workflow_dispatch:
+            
+            jobs:
+              update-notion:
+                  runs-on: ubuntu-latest
+                  
+                      steps:
+                            - name: Checkout repository
+                                    uses: actions/checkout@v4
+                                    
+                                          - name: Set up Python
+                                                  uses: actions/setup-python@v5
+                                                          with:
+                                                                    python-version: '3.11'
+                                                                    
+                                                                          - name: Cache pip dependencies
+                                                                                  uses: actions/cache@v4
+                                                                                          with:
+                                                                                                    path: ~/.cache/pip
+                                                                                                              key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+                                                                                                                        restore-keys: |
+                                                                                                                                    ${{ runner.os }}-pip-
+                                                                                                                                    
+                                                                                                                                          - name: Install dependencies
+                                                                                                                                                  run: |
+                                                                                                                                                            python -m pip install --upgrade pip
+                                                                                                                                                                      pip install -r requirements.txt
+                                                                                                                                                                      
+                                                                                                                                                                            - name: Run daily financial update
+                                                                                                                                                                                    env:
+                                                                                                                                                                                              NOTION_API_KEY: ${{ secrets.NOTION_API_KEY }}
+                                                                                                                                                                                                        NOTION_DATABASE_ID: ${{ secrets.NOTION_DATABASE_ID }}
+                                                                                                                                                                                                                  SERPER_API_KEY: ${{ secrets.SERPER_API_KEY }}
+                                                                                                                                                                                                                          run: |
+                                                                                                                                                                                                                                    python daily_financial_update.py
+                                                                                                                                                                                                                                    
+                                                                                                                                                                                                                                          - name: Notify on failure
+                                                                                                                                                                                                                                                  if: failure()
+                                                                                                                                                                                                                                                          run: |
+                                                                                                                                                                                                                                                                    echo "❌ Daily financial update failed!"
+                                                                                                                                                                                                                                                                              echo "Check the logs above for details"- cron: '0 14 * * *'  # 8 AM CST / 2 PM UTC
 
           # Allow manual triggering from GitHub Actions tab
             workflow_dispatch:
